estilizando bottom confirma pedido

--- a/siteaurorabeer/index.html
+++ b/siteaurorabeer/index.html
@@ -52,7 +52,7 @@
                 <option value="pix">PIX</option>
             </select><br><br>
 
-            <button type="button" onclick="enviarPedidoWhatsApp()">Confirmar Pedido</button>
+            <button type="button" class="button-confirma"onclick="enviarPedidoWhatsApp()">Confirmar Pedido</button>
             <button type="button" onclick="fecharModal()">Cancelar pedido</button>
         </form>
     </div>
